[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/desktop_ui/tutorial_controller_desktop.gd" type="Script" id=2]
[ext_resource path="res://ui/gui/text_box/tutorial_text_box.png" type="Texture" id=3]
[ext_resource path="res://ui/gui/mouse/mouse_indicator/mouse_indicator_left.png" type="Texture" id=4]

[node name="desktop_ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0

[node name="tutorials" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="tutorials"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 0
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="tutorials/HBoxContainer"]
margin_right = 1.0
margin_bottom = 135.0
custom_constants/margin_left = 1

[node name="VBoxContainer" type="VBoxContainer" parent="tutorials/HBoxContainer"]
margin_left = 1.0
margin_right = 85.0
margin_bottom = 135.0
mouse_filter = 2
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="tutorials/HBoxContainer/VBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
mouse_filter = 2
custom_constants/margin_top = 20

[node name="TutorialTextBox" type="TextureRect" parent="tutorials/HBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 84.0
margin_bottom = 52.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="tutorials/HBoxContainer/VBoxContainer/TutorialTextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
text = "aaaaaaaa"
align = 1
valign = 1
autowrap = true

[node name="TextureRect" type="TextureRect" parent="tutorials/HBoxContainer/VBoxContainer/TutorialTextBox"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 4
texture = ExtResource( 4 )

[node name="multiuse_timer" type="Timer" parent="tutorials"]
one_shot = true

[node name="text_cooldown_timer" type="Timer" parent="tutorials"]
one_shot = true

[connection signal="timeout" from="tutorials/multiuse_timer" to="tutorials" method="_on_multiuse_timer_timeout"]
[connection signal="timeout" from="tutorials/text_cooldown_timer" to="tutorials" method="_on_text_cooldown_timer_timeout"]
